[GTK] Several tests crashing after r247898 "Reorganize UIScriptController into platform-specific subclasses" https://bugs.webkit.org/show_bug.cgi?id=200534

Reviewed by Alejandro G. Castro.

Tools:

Add implementation of several UIScriptController virtual methods to avoid crashes.

* WebKitTestRunner/gtk/PlatformWebViewGtk.cpp:
(WTR::PlatformWebView::~PlatformWebView):
(WTR::PlatformWebView::addToWindow):
(WTR::PlatformWebView::removeFromWindow):
* WebKitTestRunner/gtk/UIScriptControllerGtk.cpp:
(WTR::UIScriptControllerGtk::doAsyncTask):
(WTR::UIScriptControllerGtk::setContinuousSpellCheckingEnabled):
(WTR::UIScriptControllerGtk::copyText):
(WTR::UIScriptControllerGtk::dismissMenu):
(WTR::UIScriptControllerGtk::isShowingMenu const):
(WTR::UIScriptControllerGtk::activateAtPoint):
(WTR::UIScriptControllerGtk::activateDataListSuggestion):
(WTR::UIScriptControllerGtk::simulateAccessibilitySettingsChangeNotification):
(WTR::UIScriptControllerGtk::removeViewFromWindow):
(WTR::UIScriptControllerGtk::addViewToWindow):
* WebKitTestRunner/gtk/UIScriptControllerGtk.h:

LayoutTests:

Update expectations.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/218391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253467 268f45cc-cd09-0410-ab3c-d52691b4dbfc